--- a/env-backend.env
+++ b/env-backend.env
@@ -1,2 +1,3 @@
 BACKEND_CORS_ORIGINS=http://localhost, http://localhost:4200, http://localhost:3000, http://localhost:8080, https://localhost, https://localhost:4200, https://localhost:3000, https://localhost:8080, http://dev.wally.pathfinder.gov.bc.ca, https://wally-staging.pathfinder.gov.bc.ca, https://wally.pathfinder.gov.bc.ca
 PROJECT_NAME=Wally
+WALLY_ENV=DEV
