--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -58,6 +58,7 @@ python-multipart==0.0.5
 pytz==2019.1
 requests==2.22.0
 six==1.12.0
+Shapely==1.6.4.post2
 SQLAlchemy==1.3.5
 starlette==0.12.0
 tenacity==5.0.4
