--- a/backend/contexts/automated_snow_weather_station_locations.json
+++ b/backend/contexts/automated_snow_weather_station_locations.json
@@ -18,18 +18,22 @@
     ""
   ],
   "context": {
-    "chart": {
-      "type": "bar",
-      "data": {
-          "labels": [],
-          "datasets": [{
-              "label": "",
-              "data": [],
-              "backgroundColor": "",
-              "borderColor": "",
-              "borderWidth": ""
-          }]
+    "charts": [
+      {
+        "chart": {
+          "type": "bar",
+          "data": {
+            "labels": [],
+            "datasets": [{
+                "label": "",
+                "data": [],
+                "backgroundColor": "",
+                "borderColor": "",
+                "borderWidth": ""
+            }]
+          }
+        }
       }
-    }
+    ]
   }
 }
