--- a/openshift/monitoring/grafana.yaml
+++ b/openshift/monitoring/grafana.yaml
@@ -51,6 +51,59 @@ objects:
             name: volume-4nkne
           - mountPath: /var/lib/grafana/dashboards/
             name: volume-q18fv
+        - args:
+            - '--client-id'
+            - '$(CLIENT_ID)'
+            - '--client-secret'
+            - '$(CLIENT_SECRET)'
+            - '--redirection-url'
+            - 'https://wally-grafana-${WALLY_ENV}.pathfinder.gov.bc.ca'
+            - '--upstream-url'
+            - 'http://localhost:3000'
+            - '--discovery-url'
+            - '$(DISCOVERY_URL)'
+            - '--enable-metrics'
+            - '--listen=127.0.0.1:4000'
+            - '--resources="uri=/*|roles=wally-admin"'
+          envFrom:
+            - secretRef:
+                name: gatekeeper-credentials
+          env:
+          - name: WALLY_ENV
+            value: "${ENVIRONMENT}"
+          image: >-
+            quay.io/keycloak/keycloak-gatekeeper:6.0.1
+          imagePullPolicy: Always
+          name: grafana-gatekeeper
+          resources:
+            requests:
+              cpu: 50m
+              memory: 100Mi
+            limits:
+              cpu: 50m
+              memory: 100Mi
+          livenessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /oauth/health
+              port: 4000
+              scheme: HTTP
+            initialDelaySeconds: 3
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 1
+          readinessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /oauth/health
+              port: 4000
+              scheme: HTTP
+            initialDelaySeconds: 3
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 1
+          terminationMessagePath: /dev/termination-log
+          terminationMessagePolicy: File
         dnsPolicy: ClusterFirst
         restartPolicy: Always
         schedulerName: default-scheduler
@@ -118,158 +171,13 @@ objects:
       termination: edge
     host: ${SERVICE_NAME}.pathfinder.gov.bc.ca
     port:
-      targetPort: 3000
+      targetPort: 4000
     to:
       kind: Service
       name: ${SERVICE_NAME}
       weight: 100
     wildcardPolicy: None
-- apiVersion: v1
-  data:
-    simple_dashboard.json: |-
-      {
-          "annotations": {
-            "list": [
-              {
-                "builtIn": 1,
-                "datasource": "-- Grafana --",
-                "enable": true,
-                "hide": true,
-                "iconColor": "rgba(0, 211, 255, 1)",
-                "name": "Annotations & Alerts",
-                "type": "dashboard"
-              }
-            ]
-          },
-          "editable": true,
-          "gnetId": null,
-          "graphTooltip": 0,
-          "id": 1,
-          "links": [],
-          "panels": [
-            {
-              "aliasColors": {},
-              "bars": false,
-              "dashLength": 10,
-              "dashes": false,
-              "datasource": "-- Grafana --",
-              "fill": 1,
-              "gridPos": {
-                "h": 9,
-                "w": 12,
-                "x": 0,
-                "y": 0
-              },
-              "id": 2,
-              "legend": {
-                "avg": false,
-                "current": false,
-                "max": false,
-                "min": false,
-                "show": true,
-                "total": false,
-                "values": false
-              },
-              "lines": true,
-              "linewidth": 1,
-              "nullPointMode": "null",
-              "options": {},
-              "percentage": false,
-              "pointradius": 2,
-              "points": false,
-              "renderer": "flot",
-              "seriesOverrides": [],
-              "spaceLength": 10,
-              "stack": false,
-              "steppedLine": false,
-              "thresholds": [],
-              "timeFrom": null,
-              "timeRegions": [],
-              "timeShift": null,
-              "title": "Panel Title",
-              "tooltip": {
-                "shared": true,
-                "sort": 0,
-                "value_type": "individual"
-              },
-              "type": "graph",
-              "xaxis": {
-                "buckets": null,
-                "mode": "time",
-                "name": null,
-                "show": true,
-                "values": []
-              },
-              "yaxes": [
-                {
-                  "format": "short",
-                  "label": null,
-                  "logBase": 1,
-                  "max": null,
-                  "min": null,
-                  "show": true
-                },
-                {
-                  "format": "short",
-                  "label": null,
-                  "logBase": 1,
-                  "max": null,
-                  "min": null,
-                  "show": true
-                }
-              ],
-              "yaxis": {
-                "align": false,
-                "alignLevel": null
-              }
-            }
-          ],
-          "schemaVersion": 18,
-          "style": "dark",
-          "tags": [],
-          "templating": {
-            "list": []
-          },
-          "time": {
-            "from": "now-6h",
-            "to": "now"
-          },
-          "timepicker": {
-            "refresh_intervals": [
-              "5s",
-              "10s",
-              "30s",
-              "1m",
-              "5m",
-              "15m",
-              "30m",
-              "1h",
-              "2h",
-              "1d"
-            ],
-            "time_options": [
-              "5m",
-              "15m",
-              "1h",
-              "6h",
-              "12h",
-              "24h",
-              "2d",
-              "7d",
-              "30d"
-            ]
-          },
-          "timezone": "",
-          "title": "New dashboard Copy",
-          "uid": "raCEvRGWk",
-          "version": 1
-        }
-  kind: ConfigMap
-  metadata:
-    labels:
-      app: ${SERVICE_NAME}
-    name: ${SERVICE_NAME}-dashboards
-    namespace: ${NAMESPACE}
+
 - apiVersion: v1
   data:
     dashboards.yml: "apiVersion: 1\n\nproviders:\n  # <string> provider name\n- name:
@@ -323,9 +231,9 @@ objects:
     namespace: ${NAMESPACE}
   spec:
     ports:
-    - port: 3000
+    - port: 4000
       protocol: TCP
-      targetPort: 3000
+      targetPort: 4000
     selector:
       app: ${SERVICE_NAME}
     sessionAffinity: None
@@ -366,3 +274,5 @@ parameters:
   name: NAMESPACE
   required: false
   value: bfpeyx-test
+- name: WALLY_ENV
+  value: staging
