--- a/openshift/monitoring/grafana.yaml
+++ b/openshift/monitoring/grafana.yaml
@@ -45,6 +45,9 @@ objects:
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
+          - mountPath: /etc/grafana/grafana.ini
+            name: volume-bzife
+            subPath: grafana.ini
           - mountPath: /etc/grafana/provisioning/datasources/
             name: volume-gocfh
           - mountPath: /etc/grafana/provisioning/dashboards/
@@ -57,14 +60,14 @@ objects:
             - '--client-secret'
             - '$(CLIENT_SECRET)'
             - '--redirection-url'
-            - 'https://wally-grafana-${WALLY_ENV}.pathfinder.gov.bc.ca'
+            - 'https://wally-${WALLY_ENV}-grafana.pathfinder.gov.bc.ca'
             - '--upstream-url'
             - 'http://localhost:3000'
-            - '--skip-upstream-tls-verify'
-            - '--verbose'
             - '--discovery-url'
             - '$(DISCOVERY_URL)'
             - '--enable-metrics'
+            - '--enable-authorization-cookies=false'
+            - '--enable-authorization-header=false'
             - '--listen=:4000'
             - '--resources'
             - 'uri=/*|roles=wally-metrics'
@@ -116,6 +119,13 @@ objects:
         securityContext: {}
         terminationGracePeriodSeconds: 30
         volumes:
+        - configMap:
+            defaultMode: 420
+            name: ${SERVICE_NAME}-cfg
+            items:
+              - key: grafana.ini
+                path: grafana.ini
+          name: volume-bzife
         - configMap:
             defaultMode: 420
             name: ${SERVICE_NAME}-datasources
