--- a/reporting/Dockerfile
+++ b/reporting/Dockerfile
@@ -4,12 +4,14 @@ WORKDIR /app
 
 USER 0
 
+RUN apt-get update -y && apt-get install -y --no-install-recommends libvips-dev
+
 COPY package*.json /app/
 
 RUN chgrp -R 0 /app/ && \
     chmod -R g=u /app/
 
-RUN npm ci
+RUN npm install
 
 COPY . .
 
