--- a/reporting/package.json
+++ b/reporting/package.json
@@ -25,7 +25,8 @@
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "staticmaps": "^1.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
