--- a/backend/display_templates/automated_snow_weather_station_locations.json
+++ b/backend/display_templates/automated_snow_weather_station_locations.json
@@ -35,7 +35,7 @@
     {
       "link_component_id": 1,
       "title": "Snow Reports",
-      "component_type_code": "link",
+      "component_type_code": "links",
       "display_order": 200,
       "link_pattern": "http://aqrt.nrs.gov.bc.ca/Report/Show/{0}/Snow.{1}.SnowStatGraph.pdf",
       "link_pattern_keys": ["OBJECTID", "LOCATION_ID"],
