--- a/backend/display_templates/automated_snow_weather_station_locations.json
+++ b/backend/display_templates/automated_snow_weather_station_locations.json
@@ -10,7 +10,7 @@
   "charts": [
     {
       "chart_component_id": 1,
-      "title": "Weather Station Elevation",
+      "chart_title": "Weather Station Elevation",
       "component_type_code": "chart",
       "display_order": 100,
       "labels_key": "LOCATION_NAME",
@@ -34,7 +34,7 @@
   "links": [
     {
       "link_component_id": 1,
-      "title": "Snow Reports",
+      "link_title": "Snow Reports",
       "component_type_code": "links",
       "display_order": 200,
       "link_pattern": "http://aqrt.nrs.gov.bc.ca/Report/Show/{0}/Snow.{1}.SnowStatGraph.pdf",
