--- a/reporting/Dockerfile
+++ b/reporting/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 USER 0
 
-RUN apt-get update -y && apt-get install -y --no-install-recommends libvips-dev
+RUN apt-get update -y && apt-get install -y --no-install-recommends libvips-dev libegl1-mesa libgles2-mesa
 
 COPY package*.json /app/
 
