--- a/reporting/package.json
+++ b/reporting/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "@mapbox/mapbox-gl-native": "^4.2.0",
     "@react-pdf/renderer": "^1.6.3",
     "axios": "^0.19.0",
     "babel-plugin-file-loader": "^1.1.1",
@@ -26,6 +27,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "sharp": "^0.23.0",
     "staticmaps": "^1.2.1"
   },
   "devDependencies": {
