--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "leaflet-lasso": "^2.0.4",
     "leaflet.locatecontrol": "^0.67.0",
     "lodash": "^4.17.15",
+    "mapbox-gl": "^1.3.0",
     "material-design-icons-iconfont": "^5.0.1",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.4.2",
