--- a/reporting/package.json
+++ b/reporting/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "@mapbox/geo-viewport": "^0.4.0",
     "@mapbox/mapbox-gl-native": "^4.2.0",
     "@react-pdf/renderer": "^1.6.3",
     "axios": "^0.19.0",
