add env var for mapbox

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -28,6 +28,8 @@ services:
       context: ./reporting
     # volumes:
     #   - ./reporting:/app
+    environment:
+      MAPBOX_ACCESS_KEY: "${MAPBOX_ACCESS_KEY}"
     env_file:
       - env-postgres.env
       - env-backend.env
