--- a/reporting/package.json
+++ b/reporting/package.json
@@ -27,9 +27,7 @@
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "sharp": "^0.23.0",
-    "staticmaps": "^1.2.1"
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
