--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-draw": "^1.1.2",
+    "@turf/bbox": "^6.0.1",
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
@@ -21,6 +23,7 @@
     "leaflet.locatecontrol": "^0.67.0",
     "lodash": "^4.17.15",
     "mapbox-gl": "^1.3.0",
+    "mapbox-gl-draw-rectangle-mode": "^1.0.4",
     "material-design-icons-iconfont": "^5.0.1",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.4.2",
