--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mapbox/mapbox-gl-draw": "^1.1.2",
+    "@mapbox/mapbox-gl-geocoder": "^4.4.1",
     "@turf/bbox": "^6.0.1",
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
