--- a/openshift/nagios/nagios3/conf.d/hosts-test.cfg
+++ b/openshift/nagios/nagios3/conf.d/hosts-test.cfg
@@ -1,6 +1,6 @@
 define host {
-        host_name                       client-test
-        address                         client.bfpeyx-test.svc
+        host_name                       api-test
+        address                         wally-staging-api.bfpeyx-test.svc
         hostgroups                      hosts-test
         check_command                   check_host
         check_interval                  60
@@ -13,8 +13,8 @@ define host {
         notifications_enabled           1
 }
 define host {
-        host_name                       tfrs-test
-        address                         backend.bfpeyx-test.svc
+        host_name                       frontend-test
+        address                         wally-staging-frontend.bfpeyx-test.svc
         hostgroups                      hosts-test
         check_command                   check_host
         check_interval                  60
@@ -27,8 +27,8 @@ define host {
         notifications_enabled           1
 }
 define host {
-        host_name                       postgresql-test
-        address                         postgresql.bfpeyx-test.svc
+        host_name                       postgres-test
+        address                         wally-psql-staging.bfpeyx-test.svc
         hostgroups                      hosts-test
         check_command                   check_host
         check_interval                  60
