--- a/openshift/nagios/nagios3/conf.d/host-groups-prod.cfg
+++ b/openshift/nagios/nagios3/conf.d/host-groups-prod.cfg
@@ -1,5 +1,5 @@
 define hostgroup {
     hostgroup_name  hosts-prod
     alias           WALLY Openshift Prod Hosts
-    members         wally-prod, postgresql-prod, keycloak-prod, email-prod
+    members         api-prod, frontend-prod, postgres-prod, keycloak-prod, email-prod
 }
