--- a/openshift/nagios/nagios3/conf.d/hosts-prod.cfg
+++ b/openshift/nagios/nagios3/conf.d/hosts-prod.cfg
@@ -1,20 +1,6 @@
 define host {
-        host_name                       client-prod
-        address                         client.bfpeyx-test.svc
-        hostgroups                      hosts-prod
-        check_command                   check_host
-        check_interval                  60
-        retry_interval                  1
-        max_check_attempts              5
-        check_period                    24x7
-        contact_groups                  tfrs-devops
-        notification_interval           30
-        notification_period             24x7
-        notifications_enabled           1
-}
-define host {
-        host_name                       wally-prod
-        address                         backend.bfpeyx-test.svc
+        host_name                       api-prod
+        address                         wally-production-api.bfpeyx-test.svc
         hostgroups                      hosts-prod
         check_command                   check_host
         check_interval                  60
@@ -27,8 +13,22 @@ define host {
         notifications_enabled           1
 }
 define host {
-        host_name                       postgresql-prod
-        address                         postgresql.bfpeyx-test.svc
+        host_name                       frontend-prod
+        address                         wally-production-frontend.bfpeyx-test.svc
+        hostgroups                      hosts-prod
+        check_command                   check_host
+        check_interval                  60
+        retry_interval                  1
+        max_check_attempts              5
+        check_period                    24x7
+        contact_groups                  wally-devops
+        notification_interval           30
+        notification_period             24x7
+        notifications_enabled           1
+}
+define host {
+        host_name                       postgres-prod
+        address                         wally-psql-production.bfpeyx-test.svc
         hostgroups                      hosts-prod
         check_command                   check_host
         check_interval                  60
