--- a/openshift/nagios/nagios3/commands.cfg
+++ b/openshift/nagios/nagios3/commands.cfg
@@ -54,27 +54,27 @@ define command{
 ;    command_line    /etc/nagios3/commands/check_replicas.sh '$ARG1$' '$ARG2$' '$ARG3$'
 ;}
 ;
-;define command {
-;    command_name    check_diskusage
-;    command_line    /etc/nagios3/commands/check_diskusage.sh '$ARG1$'
-;}
-;
+define command {
+    command_name    check_diskusage
+    command_line    /etc/nagios3/commands/check_diskusage.sh '$ARG1$'
+}
+
 ;define command {
 ;    command_name    check_postgresql_liveness
 ;    command_line    /etc/nagios3/commands/check_postgresql_liveness.sh '$ARG1$'
 ;}
 ;
-;define command {
-;    command_name    check_host
-;    command_line    /etc/nagios3/commands/check_host.sh
-;}
-;
-;define command {
-;    command_name   check_keycloak_connection
-;    command_line    /etc/nagios3/commands/check_keycloak_connection.sh
-;}
-;
-;define command {
-;    command_name   check_email_connection
-;    command_line    /etc/nagios3/commands/check_email_connection.sh
-;}
+define command {
+    command_name    check_host
+    command_line    /etc/nagios3/commands/check_host.sh
+}
+
+define command {
+    command_name   check_keycloak_connection
+    command_line    /etc/nagios3/commands/check_keycloak_connection.sh
+}
+
+define command {
+    command_name   check_email_connection
+    command_line    /etc/nagios3/commands/check_email_connection.sh
+}
