--- a/openshift/nagios/Dockerfile-base
+++ b/openshift/nagios/Dockerfile-base
@@ -1,6 +1,6 @@
 FROM debian:jessie
 ENV DEBIAN_FRONTEND=noninteractive
-RUN apt-get update && apt-get install nagios3 monitoring-plugins-standard monitoring-plugins-basic supervisor vim net-tools curl git jq exim4 tzdata check-postgres python3 python3-pip -y
+RUN apt-get update && apt-get install nagios3 monitoring-plugins-standard monitoring-plugins-basic supervisor vim net-tools curl git jq exim4 tzdata check-postgres python3 python3-pip nagios-nrpe-server nagios-nrpe-plugin nagios-plugins -y
 RUN ln -fs /usr/share/zoneinfo/Canada/Pacific /etc/localtime \
     && dpkg-reconfigure --frontend noninteractive tzdata
 RUN pip3 install "pika==0.12.0" && \
