--- a/openshift/nagios/apache2/apache2.conf
+++ b/openshift/nagios/apache2/apache2.conf
@@ -27,8 +27,11 @@ DocumentRoot "/docroot"
 
 ScriptAlias /cgi-bin/nagios3 /usr/lib/cgi-bin/nagios3
 ScriptAlias /nagios3/cgi-bin /usr/lib/cgi-bin/nagios3
-Alias /nagios3/stylesheets /etc/nagios3/stylesheets
-Alias /nagios3 /usr/share/nagios3/htdocs
+//Alias /nagios3/stylesheets /etc/nagios3/stylesheets
+//Alias /nagios3 /usr/share/nagios3/htdocs
+Alias /stylesheets /etc/nagios3/stylesheets
+Alias / /usr/share/nagios3/htdocs
+
 
 <DirectoryMatch (/usr/share/nagios3/htdocs|/usr/lib/cgi-bin/nagios3|/etc/nagios3/stylesheets)>
 	Options FollowSymLinks
