--- a/openshift/nagios/apache2/apache2.conf
+++ b/openshift/nagios/apache2/apache2.conf
@@ -25,10 +25,13 @@ DocumentRoot "/docroot"
   Allow from all
 </Directory>
 
+# ScriptAlias /cgi-bin/nagios3 /usr/lib/cgi-bin/nagios3
+# ScriptAlias /nagios3/cgi-bin /usr/lib/cgi-bin/nagios3
+# Alias /nagios3/stylesheets /etc/nagios3/stylesheets
+# Alias /nagios3 /usr/share/nagios3/htdocs
 ScriptAlias /cgi-bin/nagios3 /usr/lib/cgi-bin/nagios3
 ScriptAlias /nagios3/cgi-bin /usr/lib/cgi-bin/nagios3
-//Alias /nagios3/stylesheets /etc/nagios3/stylesheets
-//Alias /nagios3 /usr/share/nagios3/htdocs
+ScriptAlias /cgi-bin /usr/lib/cgi-bin/nagios3
 Alias /stylesheets /etc/nagios3/stylesheets
 Alias / /usr/share/nagios3/htdocs
 
