Change apache log file dir

--- a/openshift/nagios/apache2/apache2.conf
+++ b/openshift/nagios/apache2/apache2.conf
@@ -6,7 +6,9 @@ PidFile /var/run/apache2-supervisord/httpd.pid
 HostnameLookups Off
  
 LogLevel info
-ErrorLog "|/bin/cat"
+# ErrorLog "|/bin/cat"
+ErrorLog "/var/log/apache2/error.log"
+AccessLog "/var/log/apache2/access.log"
 LogFormat "%h %l %u %t \"%r\" %>s %b" common
 CustomLog "|/bin/cat" common
 
