Fixed apache config

--- a/openshift/nagios/apache2/apache2.conf
+++ b/openshift/nagios/apache2/apache2.conf
@@ -8,9 +8,9 @@ HostnameLookups Off
 LogLevel info
 # ErrorLog "|/bin/cat"
 ErrorLog "/var/log/apache2/error.log"
-AccessLog "/var/log/apache2/access.log"
 LogFormat "%h %l %u %t \"%r\" %>s %b" common
-CustomLog "|/bin/cat" common
+CustomLog "/var/log/apache2/access.log" common
+# CustomLog "|/bin/cat" common
 
 IncludeOptional mods-enabled/*.load
 IncludeOptional mods-enabled/*.conf
