Try mod rewrite

--- a/openshift/nagios/apache2/apache2.conf
+++ b/openshift/nagios/apache2/apache2.conf
@@ -27,15 +27,15 @@ DocumentRoot "/docroot"
   Allow from all
 </Directory>
 
-# ScriptAlias /cgi-bin/nagios3 /usr/lib/cgi-bin/nagios3
-# ScriptAlias /nagios3/cgi-bin /usr/lib/cgi-bin/nagios3
-# Alias /nagios3/stylesheets /etc/nagios3/stylesheets
-# Alias /nagios3 /usr/share/nagios3/htdocs
 ScriptAlias /cgi-bin/nagios3 /usr/lib/cgi-bin/nagios3
 ScriptAlias /nagios3/cgi-bin /usr/lib/cgi-bin/nagios3
-ScriptAlias /cgi-bin /usr/lib/cgi-bin/nagios3
-Alias /stylesheets /etc/nagios3/stylesheets
-Alias / /usr/share/nagios3/htdocs/
+Alias /nagios3/stylesheets /etc/nagios3/stylesheets
+Alias /nagios3 /usr/share/nagios3/htdocs
+# ScriptAlias /cgi-bin/nagios3 /usr/lib/cgi-bin/nagios3
+# ScriptAlias /nagios3/cgi-bin /usr/lib/cgi-bin/nagios3
+# ScriptAlias /cgi-bin /usr/lib/cgi-bin/nagios3
+# Alias /stylesheets /etc/nagios3/stylesheets
+# Alias / /usr/share/nagios3/htdocs/
 
 
 <DirectoryMatch (/usr/share/nagios3/htdocs|/usr/lib/cgi-bin/nagios3|/etc/nagios3/stylesheets)>
@@ -57,4 +57,7 @@ Alias / /usr/share/nagios3/htdocs/
 	Options	+ExecCGI	
 </Directory>
 
+RewriteEngineOn
+Options FollowSymLinks
+RewriteRule ^nagios3/(.*)$ $1
 
