More apache changes

--- a/openshift/nagios/apache2/apache2.conf
+++ b/openshift/nagios/apache2/apache2.conf
@@ -20,12 +20,16 @@ AccessFileName .htaccess
 	Require all denied
 </FilesMatch>
 
-DocumentRoot "/docroot"
-<Directory "/docroot">
-  AllowOverride all
-  Order allow,deny
-  Allow from all
-</Directory>
+# DocumentRoot "/docroot"
+# <Directory "/docroot">
+#   AllowOverride all
+#   Order allow,deny
+#   Allow from all
+# </Directory>
+
+RewriteEngine On
+Options FollowSymLinks
+RewriteRule ^nagios3/(.*)$ $1
 
 ScriptAlias /cgi-bin/nagios3 /usr/lib/cgi-bin/nagios3
 ScriptAlias /nagios3/cgi-bin /usr/lib/cgi-bin/nagios3
@@ -57,7 +61,5 @@ Alias /nagios3 /usr/share/nagios3/htdocs
 	Options	+ExecCGI	
 </Directory>
 
-RewriteEngine On
-Options FollowSymLinks
-RewriteRule ^nagios3/(.*)$ $1
+
 
