--- a/openshift/nagios/apache2/apache2.conf
+++ b/openshift/nagios/apache2/apache2.conf
@@ -27,9 +27,11 @@ AccessFileName .htaccess
 #   Allow from all
 # </Directory>
 
-RewriteEngine On
-Options FollowSymLinks
-RewriteRule ^nagios3/(.*)$ $1
+# RewriteEngine On
+# Options FollowSymLinks
+# RewriteRule ^nagios3/(.*)$ $1
+# RewriteRule ^nagios3/(.*)$ /$1 [L,NC,R=302,NE]
+
 
 ScriptAlias /cgi-bin/nagios3 /usr/lib/cgi-bin/nagios3
 ScriptAlias /nagios3/cgi-bin /usr/lib/cgi-bin/nagios3
@@ -37,9 +39,9 @@ Alias /nagios3/stylesheets /etc/nagios3/stylesheets
 Alias /nagios3 /usr/share/nagios3/htdocs
 # ScriptAlias /cgi-bin/nagios3 /usr/lib/cgi-bin/nagios3
 # ScriptAlias /nagios3/cgi-bin /usr/lib/cgi-bin/nagios3
-# ScriptAlias /cgi-bin /usr/lib/cgi-bin/nagios3
-# Alias /stylesheets /etc/nagios3/stylesheets
-# Alias / /usr/share/nagios3/htdocs/
+ScriptAlias /cgi-bin/ /usr/lib/cgi-bin/nagios3/
+Alias /stylesheets/ /etc/nagios3/stylesheets/
+Alias / /usr/share/nagios3/htdocs/
 
 
 <DirectoryMatch (/usr/share/nagios3/htdocs|/usr/lib/cgi-bin/nagios3|/etc/nagios3/stylesheets)>
