Update nagios deployment settings

--- a/openshift/nagios/nagios3/commands.cfg
+++ b/openshift/nagios/nagios3/commands.cfg
@@ -71,7 +71,7 @@ define command {
 
 define command {
     command_name   check_keycloak_connection
-    command_line    /etc/nagios3/commands/check_keycloak_connection.sh
+    command_line   python3 /etc/nagios3/commands/check_keycloak_connection.py -m 'OK - Keycloak connection checking passed'
 }
 
 define command {
