geojson grab for all layers

--- a/backend/display_templates/automated_snow_weather_station_locations.json
+++ b/backend/display_templates/automated_snow_weather_station_locations.json
@@ -27,6 +27,16 @@
               "borderColor": "",
               "borderWidth": ""
           }]
+        },
+        "options": {
+          "scales": {
+            "yAxes": [{
+              "scaleLabel": {
+                "display": true,
+                "labelString": "Meters(m)"
+              }
+            }]
+          }
         }
       }
     }
