Removing config maps

--- a/openshift/nagios/nagios3/conf.d/hosts-prod.cfg
+++ b/openshift/nagios/nagios3/conf.d/hosts-prod.cfg
@@ -1,6 +1,6 @@
 define host {
         host_name                       api-prod
-        address                         wally-production-api.bfpeyx-test.svc
+        address                         wally-production-api.bfpeyx-prod.svc
         hostgroups                      hosts-prod
         check_command                   check_host
         check_interval                  60
@@ -14,7 +14,7 @@ define host {
 }
 define host {
         host_name                       frontend-prod
-        address                         wally-production-frontend.bfpeyx-test.svc
+        address                         wally-production.bfpeyx-prod.svc
         hostgroups                      hosts-prod
         check_command                   check_host
         check_interval                  60
@@ -28,7 +28,7 @@ define host {
 }
 define host {
         host_name                       postgres-prod
-        address                         wally-psql-production.bfpeyx-test.svc
+        address                         wally-psql-master-production.bfpeyx-prod.svc
         hostgroups                      hosts-prod
         check_command                   check_host
         check_interval                  60
