--- a/openshift/nagios/nagios3/conf.d/hosts-test.cfg
+++ b/openshift/nagios/nagios3/conf.d/hosts-test.cfg
@@ -14,7 +14,7 @@ define host {
 }
 define host {
         host_name                       frontend-test
-        address                         wally-staging-frontend.bfpeyx-test.svc
+        address                         wally-staging.bfpeyx-test.svc
         hostgroups                      hosts-test
         check_command                   check_host
         check_interval                  60
@@ -28,7 +28,7 @@ define host {
 }
 define host {
         host_name                       postgres-test
-        address                         wally-psql-staging.bfpeyx-test.svc
+        address                         wally-psql-master-staging.bfpeyx-test.svc
         hostgroups                      hosts-test
         check_command                   check_host
         check_interval                  60
