--- a/backend/display_templates/automated_snow_weather_station_locations.json
+++ b/backend/display_templates/automated_snow_weather_station_locations.json
@@ -44,7 +44,7 @@
               "scaleLabel": {
                 "display": true,
                 "fontStyle": "bold",
-                "labelString": "Meters (m)"
+                "labelString": "Metres (m)"
               }
             }]
           }
