get mapbox token from server

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -16,9 +16,8 @@ services:
       - env-postgres.env
       - env-backend.env
     environment:
-      - SERVER_NAME=${DOMAIN}
-      - SERVER_HOST=http://${DOMAIN}
-      - PORT=8000
+      PORT: 8000
+      MAPBOX_ACCESS_TOKEN: "${MAPBOX_ACCESS_TOKEN}"
     ports:
       - '8000:8000'
     depends_on: 
@@ -29,7 +28,7 @@ services:
     # volumes:
     #   - ./reporting:/app
     environment:
-      MAPBOX_ACCESS_KEY: "${MAPBOX_ACCESS_KEY}"
+      MAPBOX_ACCESS_TOKEN: "${MAPBOX_ACCESS_TOKEN}"
     env_file:
       - env-postgres.env
       - env-backend.env
