--- a/backend/display_templates/automated_snow_weather_station_locations.json
+++ b/backend/display_templates/automated_snow_weather_station_locations.json
@@ -29,11 +29,22 @@
           }]
         },
         "options": {
+          "legend": {
+            "display": false
+          },
           "scales": {
+            "xAxes": [{
+              "scaleLabel": {
+                "display": true,
+                "fontStyle": "bold",
+                "labelString": "Location name"
+              }
+            }],
             "yAxes": [{
               "scaleLabel": {
                 "display": true,
-                "labelString": "Meters(m)"
+                "fontStyle": "bold",
+                "labelString": "Metres (m)"
               }
             }]
           }
@@ -49,6 +60,7 @@
       "display_order": 200,
       "link_pattern": "http://aqrt.nrs.gov.bc.ca/Report/Show/{0}/Snow.{1}.SnowStatGraph.pdf",
       "link_pattern_keys": ["OBJECTID", "LOCATION_ID"],
+      "link_label_key": "LOCATION_NAME",
       "display_template_id": 2
     }
   ],
