route config test

--- a/openshift/reporting.deploy.yaml
+++ b/openshift/reporting.deploy.yaml
@@ -139,6 +139,27 @@ objects:
         component: reporting
         name: wally-${NAME}-reporting
       name: wally-${NAME}-reporting
+  - apiVersion: route.openshift.io/v1
+    kind: Route
+    spec:
+      host: ${HOST}
+      path: /reporting
+      port:
+        targetPort: 3000-tcp
+      tls:
+        termination: edge
+      to:
+        kind: Service
+        name: wally-${NAME}-reporting
+        weight: 100
+      wildcardPolicy: None
+    metadata:
+      labels:
+        app: wally-${NAME}
+        env: ${NAME}
+        component: reporting
+        name: wally-${NAME}-reporting
+      name: wally-${NAME}-reporting
 kind: Template
 metadata:
   resourceVersion: ''
