--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -38,6 +38,7 @@ MarkupSafe==1.1.1
 mccabe==0.6.1
 more-itertools==7.2.0
 multidict==4.5.2
+openpyxl==3.0.0
 packaging==19.1
 passlib==1.7.1
 pipenv==2018.11.26
