--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "@turf/bbox": "^6.0.1",
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
-    "core-js": "^2.6.5",
+    "core-js": "^3.2.1",
     "esri-leaflet": "^2.2.4",
     "keycloak-js": "^6.0.1",
     "leaflet": "^1.5.1",
@@ -22,7 +22,7 @@
     "leaflet-geosearch": "^2.7.0",
     "leaflet-lasso": "^2.0.4",
     "leaflet.locatecontrol": "^0.67.0",
-    "lodash": "^4.17.15",
+    "lodash.round": "^4.0.4",
     "mapbox-gl": "^1.3.0",
     "mapbox-gl-draw-rectangle-mode": "^1.0.4",
     "material-design-icons-iconfont": "^5.0.1",
