--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mapbox/mapbox-gl-draw": "^1.1.2",
     "@mapbox/mapbox-gl-geocoder": "^4.4.1",
+    "@mdi/font": "^4.4.95",
     "@turf/bbox": "^6.0.1",
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
@@ -29,7 +30,7 @@
     "vue": "^2.6.10",
     "vue-chartjs": "^3.4.2",
     "vue-router": "^3.0.3",
-    "vuetify": "^2.0.15",
+    "vuetify": "^2.1.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
