--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
 aiohttp==3.5.4
+alchemy-mock==0.4.1
 alembic==1.0.11
 amqp==2.5.0
 astroid==2.2.5
@@ -20,6 +21,9 @@ cssutils==1.0.2
 dnspython==1.16.0
 email-validator==1.0.4
 emails==0.5.15
+et-xmlfile==1.0.1
+factory-boy==2.12.0
+Faker==2.0.1
 fastapi==0.31.0
 GeoAlchemy2==0.6.3
 geojson==2.4.1
@@ -29,6 +33,7 @@ httptools==0.0.13
 idna==2.8
 importlib-metadata==0.19
 isort==4.3.20
+jdcal==1.4.1
 Jinja2==2.10.1
 kombu==4.6.3
 lazy-object-proxy==1.4.1
@@ -41,6 +46,7 @@ multidict==4.5.2
 openpyxl==3.0.0
 packaging==19.1
 passlib==1.7.1
+pdfkit==0.6.1
 pipenv==2018.11.26
 pluggy==0.12.0
 premailer==3.5.0
@@ -58,11 +64,12 @@ python-editor==1.0.4
 python-multipart==0.0.5
 pytz==2019.1
 requests==2.22.0
-six==1.12.0
 Shapely==1.6.4.post2
+six==1.12.0
 SQLAlchemy==1.3.5
 starlette==0.12.0
 tenacity==5.0.4
+text-unidecode==1.2
 typed-ast==1.4.0
 urllib3==1.25.3
 uvicorn==0.8.4
@@ -70,9 +77,8 @@ uvloop==0.12.2
 vine==1.3.0
 virtualenv==16.6.1
 virtualenv-clone==0.5.3
+wcwidth==0.1.7
 websockets==7.0
 wrapt==1.11.2
-factory-boy==2.12.0
-geojson==2.4.1
-pytest==5.0.1
-alchemy-mock==0.4.1
+yarl==1.3.0
+zipp==0.6.0
