WIP environment var for report url

--- a/openshift/backend.deploy.yaml
+++ b/openshift/backend.deploy.yaml
@@ -79,6 +79,8 @@ objects:
               value: wally-psql-master-${NAME}
             - name: WALLY_ENV
               value: "${ENVIRONMENT}"
+            - name: REPORT_URL
+              value: "${REPORT_URL}"
       type: Rolling
     template:
       metadata:
