--- a/env-backend.env
+++ b/env-backend.env
@@ -2,3 +2,4 @@ BACKEND_CORS_ORIGINS=http://localhost, http://localhost:4200, http://localhost:3
 PROJECT_NAME=Wally
 API_SERVICE=backend:8000
 WALLY_ENV=DEV
+REPORT_URL=http://localhost/html-report/
