--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,13 +12,17 @@ autopep8==1.4.4
 bcrypt==3.1.7
 billiard==3.6.0.0
 cachetools==3.1.1
+cairocffi==1.1.0
+CairoSVG==2.4.2
 celery==4.3.0
 certifi==2019.6.16
 cffi==1.12.3
 chardet==3.0.4
 Click==7.0
 cssselect==1.0.3
+cssselect2==0.2.2
 cssutils==1.0.2
+defusedxml==0.6.0
 dnspython==1.16.0
 email-validator==1.0.4
 emails==0.5.15
@@ -30,6 +34,7 @@ GeoAlchemy2==0.6.3
 geojson==2.4.1
 gunicorn==19.9.0
 h11==0.8.1
+html5lib==1.0.1
 httptools==0.0.13
 idna==2.8
 importlib-metadata==0.19
@@ -48,6 +53,7 @@ openpyxl==3.0.0
 packaging==19.1
 passlib==1.7.1
 pdfkit==0.6.1
+Pillow==6.2.0
 pipenv==2018.11.26
 pluggy==0.12.0
 premailer==3.5.0
@@ -59,6 +65,7 @@ pydantic==0.29
 PyJWT==1.7.1
 pylint==2.3.1
 pyparsing==2.4.2
+Pyphen==0.9.5
 pytest==5.0.1
 python-dateutil==2.8.0
 python-editor==1.0.4
@@ -71,6 +78,7 @@ SQLAlchemy==1.3.5
 starlette==0.12.0
 tenacity==5.0.4
 text-unidecode==1.2
+tinycss2==1.0.2
 typed-ast==1.4.0
 urllib3==1.25.3
 uvicorn==0.8.4
@@ -79,6 +87,8 @@ vine==1.3.0
 virtualenv==16.6.1
 virtualenv-clone==0.5.3
 wcwidth==0.1.7
+WeasyPrint==50
+webencodings==0.5.1
 websockets==7.0
 wrapt==1.11.2
 yarl==1.3.0
