--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "leaflet-lasso": "^2.0.4",
     "leaflet.locatecontrol": "^0.67.0",
     "lodash": "^4.17.15",
+    "lodash.debounce": "^4.0.8",
     "mapbox-gl": "^1.3.0",
     "mapbox-gl-draw-rectangle-mode": "^1.0.4",
     "material-design-icons-iconfont": "^5.0.1",
