Added postgresql disk usage to nagios

--- a/openshift/nagios/nagios3/conf/commands.cfg
+++ b/openshift/nagios/nagios3/conf/commands.cfg
@@ -55,8 +55,8 @@ define command{
 ;}
 ;
 define command {
-    command_name    check_diskusage
-    command_line    /etc/nagios3/commands/check_diskusage.sh '$ARG1$'
+    command_name    check_db_diskusage
+    command_line    /etc/nagios3/commands/check_db_diskusage.sh '$ARG1$'
 }
 
 ;define command {
