--- a/openshift/nagios/nagios3/conf.d/host-groups-test.cfg
+++ b/openshift/nagios/nagios3/conf.d/host-groups-test.cfg
@@ -1,5 +1,5 @@
 define hostgroup {
     hostgroup_name  hosts-test
     alias           WALLY Openshift Test Hosts
-    members         api-test, frontend-test, postgres-test, keycloak-test, email-test
+    members         api-test, frontend-test, postgres-test
 }
