--- a/openshift/nagios/nagios3/conf.d/services-other-test.cfg
+++ b/openshift/nagios/nagios3/conf.d/services-other-test.cfg
@@ -38,8 +38,8 @@ define service {
 ;      notifications_enabled           1
 ;}
 define service {
-      host_name                       postgres-test
-      service_description             Email connection check
+      host_name                       postgres-test!bfpeyx-test
+      service_description             Check db disk usage
       check_command                   check_db_diskusage
       check_interval                  5
       retry_interval                  1
