--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -62,6 +62,7 @@ six==1.12.0
 Shapely==1.6.4.post2
 SQLAlchemy==1.3.5
 starlette==0.12.0
+starlette-exporter==0.1.0
 tenacity==5.0.4
 typed-ast==1.4.0
 urllib3==1.25.3
