add scrape annotation

--- a/openshift/backend.deploy.yaml
+++ b/openshift/backend.deploy.yaml
@@ -86,6 +86,8 @@ objects:
       metadata:
         annotations:
           openshift.io/generated-by: OpenShiftNewApp
+          prometheus.io/scrape: "true"
+          prometheus.io/port: "8000"
         labels:
             app: wally-${NAME}
             env: ${NAME}
