give user Wally permission to create files

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,9 @@
 FROM python:3.7
 
 WORKDIR /app/
-
-RUN apt-get -y install ca-certificates
+RUN adduser wally root && chmod -R 775 /app \
+  && chown -R wally:root /app \ 
+  && apt-get -y install ca-certificates
 
 COPY ./requirements.txt /
 
@@ -14,6 +15,7 @@ ENV PYTHONPATH=/app
 RUN pytest /app/tests/ -W ignore::DeprecationWarning
 
 EXPOSE 8000
+USER wally
 
 # Run the start script, it will check for an /app/prestart.sh script (e.g. for migrations)
 # And then will start Gunicorn with Uvicorn
