fix useradd cmd

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.7
 
 WORKDIR /app/
-RUN adduser wally root && chmod -R 775 /app \
+RUN useradd wally -M -G root -u 1021 && chmod -R 775 /app \
   && chown -R wally:root /app \ 
   && apt-get -y install ca-certificates
 
@@ -15,7 +15,7 @@ ENV PYTHONPATH=/app
 RUN pytest /app/tests/ -W ignore::DeprecationWarning
 
 EXPOSE 8000
-USER wally
+USER 1021
 
 # Run the start script, it will check for an /app/prestart.sh script (e.g. for migrations)
 # And then will start Gunicorn with Uvicorn
