Horrible, horrible bug

--- a/openshift/nagios/nagios3/conf.d/services-other-test.cfg
+++ b/openshift/nagios/nagios3/conf.d/services-other-test.cfg
@@ -38,9 +38,9 @@ define service {
 ;      notifications_enabled           1
 ;}
 define service {
-      host_name                       postgres-test!bfpeyx-test
+      host_name                       postgres-test
       service_description             Check db disk usage
-      check_command                   check_db_diskusage
+      check_command                   check_db_diskusage!bfpeyx-test
       check_interval                  5
       retry_interval                  1
       max_check_attempts              5
