--- a/openshift/nagios/nagios3/conf.d/services-other-prod.cfg
+++ b/openshift/nagios/nagios3/conf.d/services-other-prod.cfg
@@ -38,9 +38,9 @@ define service {
 ;      notifications_enabled           1
 ;}
 define service {
-      host_name                       postgres-prod!bfpeyx-prod
+      host_name                       postgres-prod
       service_description             Check db disk usage
-      check_command                   check_db_diskusage
+      check_command                   check_db_diskusage!bfpeyx-prod
       check_interval                  5
       retry_interval                  1
       max_check_attempts              5
