--- a/backend/api-tests/data_endpoints.apitest.yaml
+++ b/backend/api-tests/data_endpoints.apitest.yaml
@@ -81,4 +81,9 @@ requests:
     url: "{{host}}/api/v1/analysis/wells/nearby?radius=20000&&point=%5B-122.90700522356728%2C49.31036202688435%5D"
     method: get
     expect:
-      status: 400
+      status: 422
+  - name: Licence radius search
+    url: "{{host}}/api/v1/analysis/licences/nearby?radius=1000&&point=%5B-122.90700522356728%2C49.31036202688435%5D"
+    method: get
+    expect:
+      status: 200
