--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,3 +1,7 @@
 VUE_APP_AXIOS_BASE_URL = 'http://localhost:8000'
 VUE_APP_REPORTING_URL = 'http://localhost:3000/reports'
 VUE_APP_ENV = 'dev'
+
+# Mapbox
+VUE_APP_MAP_CENTER=[-122.96, 50.12]
+VUE_APP_MAP_ZOOM_LEVEL=12.7
