add ability to load geojson from container

--- a/openshift/import-jobs/Dockerfile
+++ b/openshift/import-jobs/Dockerfile
@@ -1,6 +1,12 @@
 FROM debian
-RUN apt-get update && apt-get install -y pgloader curl unzip sqlite3 \
-    && rm -rf /var/lib/apt/lists/* 
+
 WORKDIR /dataload
+
+RUN apt-get update && apt-get install -y pgloader curl unzip sqlite3 \
+    && rm -rf /var/lib/apt/lists/* \
+    && wget https://dl.min.io/client/mc/release/linux-amd64/mc \
+    && chmod +x mc
+
 COPY ./hydat/load_hydat.sh /dataload
+COPY ./databc/load_layer_data.sh /dataload
 CMD ["/dataload/load_hydat.sh"]
