--- a/openshift/import-jobs/Dockerfile
+++ b/openshift/import-jobs/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /dataload
 
 RUN apt-get update && apt-get install -y pgloader curl unzip sqlite3 \
     && rm -rf /var/lib/apt/lists/* \
-    && wget https://dl.min.io/client/mc/release/linux-amd64/mc \
+    && curl -O https://dl.min.io/client/mc/release/linux-amd64/mc \
     && chmod +x mc
 
 COPY ./hydat/load_hydat.sh /dataload
