add user to dockerfile

--- a/openshift/import-jobs/Dockerfile
+++ b/openshift/import-jobs/Dockerfile
@@ -1,12 +1,14 @@
 FROM debian
 
 WORKDIR /dataload
-
-RUN apt-get update && apt-get install -y pgloader curl unzip sqlite3 \
-    && rm -rf /var/lib/apt/lists/* \
-    && curl -O https://dl.min.io/client/mc/release/linux-amd64/mc \
-    && chmod +x mc
+RUN useradd wally -M -G root -u 1021 && chmod -R 775 /dataload \
+  && chown -R wally:root /dataload \
+  && apt-get update && apt-get install -y pgloader curl unzip sqlite3 \
+  && rm -rf /var/lib/apt/lists/* \
+  && curl -O https://dl.min.io/client/mc/release/linux-amd64/mc \
+  && chmod +x mc
 
 COPY ./hydat/load_hydat.sh /dataload
 COPY ./databc/load_layer_data.sh /dataload
+USER 1021
 CMD ["/dataload/load_hydat.sh"]
