copy all helper shell files in databc dir

--- a/openshift/import-jobs/Dockerfile
+++ b/openshift/import-jobs/Dockerfile
@@ -9,7 +9,6 @@ RUN useradd wally -M -G root -u 1021 && chmod -R 775 /dataload \
   && chmod +x mc
 
 COPY ./hydat/load_hydat.sh /dataload
-COPY ./databc/load_layer_data.sh /dataload
-COPY ./databc/download_layer.sh /dataload
+COPY ./databc/*.sh /dataload
 USER 1021
 CMD ["/dataload/load_hydat.sh"]
