--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,8 +30,10 @@
     "mapbox-gl": "^1.3.0",
     "mapbox-gl-draw-rectangle-mode": "^1.0.4",
     "material-design-icons-iconfont": "^5.0.1",
+    "plotly.js-dist": "^1.51.1",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.4.2",
+    "vue-plotly": "^1.0.1",
     "vue-router": "^3.0.3",
     "vuetify": "^2.1.1",
     "vuex": "^3.0.1"
