fix projection for download script

--- a/openshift/import-jobs/tippecanoe.job.yaml
+++ b/openshift/import-jobs/tippecanoe.job.yaml
@@ -15,7 +15,7 @@ parameters:
   displayName: Job name
   name: JOB_NAME
   required: true
-  value: dataload
+  value: tippecanoe
 objects:
   - apiVersion: batch/v1
     kind: Job
