--- a/openshift/backend.deploy.yaml
+++ b/openshift/backend.deploy.yaml
@@ -164,7 +164,7 @@ objects:
           - -config.file=/etc/promtail/promtail.yaml
           - -client.url=http://loki:3100/api/prom/push
           volumeMounts:
-          - name: logs
+          - name: logging
             mountPath: /app/.log/
           - name: promtail-config
             mountPath: /etc/promtail
