--- a/openshift/backend.deploy.yaml
+++ b/openshift/backend.deploy.yaml
@@ -163,7 +163,7 @@ objects:
           image: grafana/promtail:latest
           args:
           - -config.file=/etc/promtail/promtail.yaml
-          - -client.url=http://wally-staging-loki.pathfinder.gov.bc.ca/api/prom/push
+          - -client.url=http://loki:3100/api/prom/push
           volumeMounts:
           - name: logging
             mountPath: /app/.log/
